[tool.poetry]
name = "cinnabar"
version = "1.0.0-alpha"
description = ""
authors = ["Michael Swiger <michael@swiger.dev>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.1"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.2"
PyGObject-stubs = "^0.0.9"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.taskipy.tasks]
start = "python cinnabar"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
