[tool.poetry]
name = "cinnabar"
version = "1.0.0-alpha"
description = ""
authors = ["Michael Swiger <michael@swiger.dev>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
PyGObject = "^3.42.1"
nestedtext = "^3.4.0"
sdbus = "^0.10.1"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
taskipy = "^1.10.2"
PyGObject-stubs = "^1.0.0"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.taskipy.tasks]
start = "python cinnabar"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
